--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       },
       auth: {
         type: 'token',
-        token: 'pat_********',  // 🔒 请替换为你自己的有效 token
+        token: 'pat_UdZmAD9vdQrEbj3ZEy96n8evcuFi1HMQU3K5uHG7EHD6Iz3L1iJfIl5Ha8OWVPAU',  // 🔒 请替换为你自己的有效 token
         onRefreshToken: function () {
           return 'pat_********'; // 如果需要定期刷新 token，可在此返回新 token
         }
