--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         type: 'token',
         token: 'pat_UdZmAD9vdQrEbj3ZEy96n8evcuFi1HMQU3K5uHG7EHD6Iz3L1iJfIl5Ha8OWVPAU',  // 🔒 请替换为你自己的有效 token
         onRefreshToken: function () {
-          return 'pat_********'; // 如果需要定期刷新 token，可在此返回新 token
+          return 'pat_UdZmAD9vdQrEbj3ZEy96n8evcuFi1HMQU3K5uHG7EHD6Iz3L1iJfIl5Ha8OWVPAU'; // 如果需要定期刷新 token，可在此返回新 token
         }
       }
     });
