--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       componentProps: {
         title: '外观偏好调研员',
         open: false // 初始不展开，由按钮触发
+        position: 'left-bottom' 
       },
       auth: {
         type: 'token',
