--- a/index.html
+++ b/index.html
@@ -2,65 +2,48 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>车辆外观调研员 - 聊天机器人</title>
+  <title>车辆外观调研员 - 嵌入式聊天机器人</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f0f4f8;
-      color: #333;
+      background-color: #f2f4f7;
     }
 
     header {
       background-color: #004d99;
       color: white;
-      padding: 40px 20px;
+      padding: 30px 20px;
       text-align: center;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 32px;
-    }
-
-    header p {
-      font-size: 16px;
-      margin-top: 8px;
     }
 
     main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 40px 20px;
-      text-align: center;
     }
 
     .intro-text {
       font-size: 18px;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
-    .start-btn {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 14px 28px;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0, 123, 255, 0.3);
-      transition: background-color 0.3s ease;
-    }
-
-    .start-btn:hover {
-      background-color: #0056b3;
+    #chat-container {
+      width: 100%;
+      max-width: 800px;
+      height: 600px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     }
 
     footer {
-      margin-top: 60px;
-      padding: 20px;
       text-align: center;
-      color: #888;
+      margin-top: 40px;
+      color: #999;
       font-size: 14px;
     }
   </style>
@@ -68,29 +51,28 @@
 <body>
   <header>
     <h1>车辆外观调研员</h1>
-    <p>欢迎体验车辆外观偏好调研对话助手</p>
+    <p>欢迎参与车辆外观偏好调研</p>
   </header>
 
   <main>
-    <p class="intro-text">点击下方按钮，开始与智能助手对话，参与调研吧！</p>
-    <button class="start-btn" onclick="client.open()">开始调研</button>
+    <p class="intro-text">下方是调研助手对话窗口，请开始互动：</p>
+    <div id="chat-container"></div>
   </main>
 
-  <footer>
-    © 2025 车辆调研项目团队
-  </footer>
+  <footer>© 2025 调研助手平台</footer>
 
   <!-- 引入 Coze SDK -->
   <script src="https://lf-cdn.coze.cn/obj/unpkg/flow-platform/chat-app-sdk/1.2.0-beta.6/libs/cn/index.js"></script>
   <script>
-    const client = new CozeWebSDK.WebChatClient({
+    new CozeWebSDK.WebChatClient({
       config: {
         bot_id: '7501314855144849408',
+        mode: 'embed',              // 使用嵌入模式
+        containerId: 'chat-container' // 绑定到指定容器
       },
       componentProps: {
         title: '外观偏好调研员',
-        open: false // 初始不展开，由按钮触发
-        position: 'left-bottom' 
+        embedded: true
       },
       auth: {
         type: 'token',
