--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       },
       auth: {
         type: 'token',
-        token: 'pat_********',
+        token: 'pat_UdZmAD9vdQrEbj3ZEy96n8evcuFi1HMQU3K5uHG7EHD6Iz3L1iJfIl5Ha8OWVPAU',
         onRefreshToken: function () {
-          return 'pat_********';
+          return 'pat_UdZmAD9vdQrEbj3ZEy96n8evcuFi1HMQU3K5uHG7EHD6Iz3L1iJfIl5Ha8OWVPAU';
         }
       }
     });
